--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "trello-clone-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "micro src/index.js",
-    "dev": "micro-dev src/index.js"
+    "start": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -17,14 +16,13 @@
     "url": "https://github.com/ryonryon/trello-clone-backend/issues"
   },
   "homepage": "https://github.com/ryonryon/trello-clone-backend#readme",
-  "dependencies": {
-    "micro": "^9.3.4"
-  },
   "devDependencies": {
-    "@types/micro": "^7.3.7",
     "@types/node": "^17.0.27",
-    "micro-dev": "^3.0.0",
-    "ts-loader": "^9.2.8",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "fastify": "^3.28.0"
   }
 }
