--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "fastify": "^3.28.0"
+    "dotenv": "^16.0.0",
+    "fastify": "^3.28.0",
+    "fastify-cors": "^6.0.3",
+    "pg": "^8.7.3",
+    "typeorm": "^0.3.6"
   }
 }
