--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.27",
-    "jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
     "husky": "^7.0.4",
+    "jest": "^27.4.1",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.3",
     "ts-jest": "^27.1.4",
@@ -35,9 +35,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@fastify/cors": "^7.0.0",
     "dotenv": "^16.0.0",
     "fastify": "^3.28.0",
-    "fastify-cors": "^6.0.3",
     "pg": "^8.7.3",
     "prettier": "^2.6.2",
     "typeorm": "^0.3.6"
