Separate DB init logic to make it accessible from test to destroy its connection

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon src/index.ts",
     "test": "jest",
+    "test-warnings": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix"
